--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
               <img src="assets/img/gallery/eshop.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/eshop.jpg" title="An Ecommerce application built with Reactjs and attendant libraries, node express with mongoDb for back-end" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://e-shop-psi-ten.vercel.app/" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="https://client-dot-eshop-439007.uc.r.appspot.com/" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
