--- a/contact.html
+++ b/contact.html
@@ -41,14 +41,14 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <i class="bi bi-camera"></i>
+        <img src="./assets/img/gallery/myp.ico"></i>
         <h1 class="sitename">Aroh Ebenezer</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html">Home<br></a></li>
-          <li><a href="contact.html" class="active">Contact</a></li>
+          <li style="background-color: black;"><a href="index.html">Home<br></a></li>
+          <li style="background-color: black;"><a href="contact.html" class="active">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
