--- a/contact.html
+++ b/contact.html
@@ -24,13 +24,7 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: PhotoFolio
-  * Template URL: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/
-  * Updated: Aug 07 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+
 </head>
 
 <body class="contact-page">
@@ -39,8 +33,6 @@
     <div class="container-fluid position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
         <img src="./assets/img/gallery/myp.ico"></i>
         <h1 class="sitename">Aroh Ebenezer</h1>
       </a>
@@ -54,10 +46,10 @@
       </nav>
 
       <div class="header-social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="https://www.facebook.com/aroh.ebenezer/" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="https://www.instagram.com/beearoh/?hl=ur" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="https://ng.linkedin.com/in/aroh-ebenezer-10b279210" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/Benny-Nwaro/"><i class="bi bi-github"></i></a>
+        <a href="https://docs.google.com/document/d/1NyO_L4bLRWeVCxkrXY0I-H9rXhbskc3a89Y7PPtDrNg/edit?usp=sharing"><i class="bi bi-file-person"></i></a>
+        <a href="https://web.whatsapp.com/send?phone=2348167203767"><i class="bi bi-whatsapp"></i></a>
+        <a href="https://ng.linkedin.com/in/aroh-ebenezer-10b279210"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
@@ -170,9 +162,9 @@
         <p>© <span>Copyright</span> <span>All Rights Reserved</span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href="https://www.facebook.com/aroh.ebenezer/"><i class="bi bi-facebook"></i></a>
-        <a href="https://www.instagram.com/beearoh/?hl=ur"><i class="bi bi-instagram"></i></a>
+        <a href="https://github.com/Benny-Nwaro/"><i class="bi bi-github"></i></a>
+        <a href="https://docs.google.com/document/d/1NyO_L4bLRWeVCxkrXY0I-H9rXhbskc3a89Y7PPtDrNg/edit?usp=sharing"><i class="bi bi-file-person"></i></a>
+        <a href="https://web.whatsapp.com/send?phone=2348167203767"><i class="bi bi-whatsapp"></i></a>
         <a href="https://ng.linkedin.com/in/aroh-ebenezer-10b279210"><i class="bi bi-linkedin"></i></a>
       </div>
    
