--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
           
                 <div class="carousel-item">
                   <a href="https://open-d.vercel.app">
-                    <img src="assets/img/gallery/openD.jpeg" height="500px" width="100%" class="rounded" alt="OpenD Project">
+                    <img src="assets/img/gallery/openD.jpg" height="500px" width="100%" class="rounded" alt="OpenD Project">
                   </a>
                   <div class="gallery-links d-flex align-items-center justify-content-center">
-                    <a href="assets/img/gallery/openD.jpeg" title="Project is built Reactjs for frontend and node express with PostgreSQL" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                    <a href="assets/img/gallery/openD.jpg" title="Project is built Reactjs for frontend and node express with PostgreSQL" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                     <a href="https://open-d.vercel.app" class="details-link"><i class="bi bi-link-45deg"></i></a>
                   </div>
                 </div>
