added a new project

--- a/index.html
+++ b/index.html
@@ -171,6 +171,16 @@
                     <a href="https://client-dot-eshop-439007.uc.r.appspot.com/" class="details-link"><i class="bi bi-link-45deg"></i></a>
                   </div>
                 </div>
+                
+                <div class="carousel-item">
+                  <a href="https://anonymous-ashy.vercel.app/">
+                    <img src="assets/img/gallery/anonymous.jpg" height="500px" width="100%" class="rounded" alt="Eshop Project">
+                  </a>
+                  <div class="gallery-links d-flex align-items-center justify-content-center">
+                    <a href="assets/img/gallery/anonymous.jpg" title="Read anonymous secrets posted by users. Tell your own secret anonymously" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                    <a href="https://anonymous-ashy.vercel.app/" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  </div>
+                </div>
           
                 <div class="carousel-item">
                   <img src="assets/img/gallery/secrets.jpeg" height="500px" width="100%" class="rounded" alt="Secrets Project">
