--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                     <li>React</li>
                     <li>React Native</li>
                     <li>Vue.js</li>
+                    <li>Nextjs</li>
                     <li>Java</li>
                     <li>Node.js</li>
                     <li>Express.js</li>
@@ -189,6 +190,17 @@
                     <a href="https://anonymous-ashy.vercel.app/" class="details-link"><i class="bi bi-link-45deg"></i></a>
                   </div>
                 </div>
+
+                             <!-- Slide 6 -->
+                             <div class="carousel-item">
+                              <a href="https://forcythe-flax.vercel.app/">
+                                <img src="assets/img/gallery/forcythe.jpeg" height="500px" width="100%" class="rounded" alt="Anonymous Project">
+                              </a>
+                              <div class="gallery-links d-flex align-items-center justify-content-center">
+                                <a href="assets/img/gallery/forcythe.jpeg" title="Read and share anonymous secrets. Built with a focus on simplicity and security." class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                                <a href="https://forcythe-flax.vercel.app/" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                              </div>
+                            </div>
         
                 <!-- Slide 6 -->
                 <div class="carousel-item">
