--- a/index.html
+++ b/index.html
@@ -157,12 +157,12 @@
                 </div>
 
                 <div class="carousel-item">
-                  <a href="https://client-dot-eshop-439007.uc.r.appspot.com/">
+                  <a href="https://e-commerce-client2025-4deef7ac4fde.herokuapp.com/">
                     <img src="assets/img/gallery/eshop.jpg" height="500px" width="100%" class="rounded" alt="Eshop Project">
                   </a>
                   <div class="gallery-links d-flex align-items-center justify-content-center">
                     <a href="assets/img/gallery/eshop.jpg" title="A fullstack eCommerce application using ReactJS, Redux, Node.js, and MongoDB with Stripe payment gateway." class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                    <a href="https://client-dot-eshop-439007.uc.r.appspot.com/" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                    <a href="https://e-commerce-client2025-4deef7ac4fde.herokuapp.com/" class="details-link"><i class="bi bi-link-45deg"></i></a>
                   </div>
                 </div>
 
